--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -32,6 +36,8 @@
         <activity android:name=".Home_posting"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Fragment_place"
+            android:theme="@style/AppTheme.MaterialTheme"/>
+        <activity android:name=".Chat_Details"
             android:theme="@style/AppTheme.MaterialTheme"/>
 
         <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
