--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Mypage_profile_edit"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Mypage_match"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Mypage_interest"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
