--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".LoginSignup"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".LoginSignup2"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
