--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     //뷰페이저
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
+    //네이버로그인
+    implementation 'com.navercorp.nid:oauth-jdk8:5.8.0' // jdk 8
+
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-analytics'
