회원가입창 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,17 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-
 
     <application
         android:name=".GlobalApplication"
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -25,8 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Woodonggo"
+        android:usesCleartextTraffic="true"
         tools:targetApi="33">
-
         <activity
             android:name=".Splash"
             android:exported="true"
@@ -37,49 +36,69 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Home.Home_category"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Home.Home_search"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Home.Home_notification"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Home.Home_posting"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".FragmentPlace"
-            android:theme="@style/AppTheme.MaterialTheme"/>
-        <activity android:name=".ChatDetails"
-            android:theme="@style/AppTheme.MaterialTheme"/>
-        <activity android:name=".Mypage_profile"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Mypage_profile_edit"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Mypage_match"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Mypage_interest"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".LoginSignup"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".LoginSignup2"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".LoginMain"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Home.Home_category"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Home.Home_search"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Home.Home_notification"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Home.Home_posting"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".FragmentPlace"
+            android:theme="@style/AppTheme.MaterialTheme" />
+        <activity
+            android:name=".ChatDetails"
+            android:theme="@style/AppTheme.MaterialTheme" />
+        <activity
+            android:name=".Mypage_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Mypage_profile_edit"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Mypage_match"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Mypage_interest"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginSignup"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginSignup2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginMain"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginFindId"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
-        <meta-data android:name="com.kakao.sdk.Appkey"
-            android:value="6e57980f9050faf730dbb4af45ab8602"/>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+        <meta-data
+            android:name="com.kakao.sdk.Appkey"
+            android:value="6e57980f9050faf730dbb4af45ab8602" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <!--                <!— Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" —>-->
+                <!-- <!— Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" —> -->
                 <data
                     android:host="oauth"
                     android:scheme="kakaocbcd0f31a70352a954647060b9576612" />
