회원가입창 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,12 @@
         <activity
             android:name=".LoginFindId"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginFindPw1"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginFindPw2"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
