회원가입창 이미지 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,9 @@
             android:name=".LoginSignup2"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".LoginSignup3"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".LoginMain"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
