chatting_detail.xml update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,9 @@
         <activity
             android:name=".LoginFindPw2"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".PlaceWebview"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
