mypage_interest XML에서 라디오버튼 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             android:name=".Mypage_match"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Mypage_interest"
+            android:name=".MypageInterest"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginSignup"
