로그인 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
     implementation 'com.kakao.sdk:v2-user:2.15.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0' //원형 프로필
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -40,6 +41,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads-lite:22.1.0'
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
