게시글 클릭 시 해당 게시글 상세보기 가능 (텍스트만 인텐트로 받아올 수 있도록 함.)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity
             android:name=".Home.Home_posting"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Home.Home_posting_detail"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".FragmentPlace"
             android:theme="@style/AppTheme.MaterialTheme" />
